--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-
+# Server
+server.port=8080
+server.servlet.context-path=/api
+# Jpa settings
+spring.jpa.hibernate.ddl-auto=update
+# Datasource
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# Security
+oauth.jwt.secret=secret_key
+#spring.application.name=project2
+spring.application.name=hotel-user-service
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
