added sending message via MessageBroker to notfiService after registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,12 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # Security
 oauth.jwt.secret=secret_key
-#spring.application.name=project2
 spring.application.name=hotel-user-service
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
+
+#ActiveMQ
+amq.url=tcp://localhost:61616
+amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=${amq.url}${amq.queryParameters}
+destination.user.registrated.message=user_registrated_message
